--- a/APAP/authservice/templates/authservice/signin.html
+++ b/APAP/authservice/templates/authservice/signin.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %} <!-- base.html의 내용을 가져오겠다. -->
 {% load staticfiles %}
 {% block content %}
-<!-- Gallery -->					
-{% endblock %} 
+어푸어푸
+{% endblock %}  
+ 
