--- a/APAP/authservice/templates/authservice/signup.html
+++ b/APAP/authservice/templates/authservice/signup.html
@@ -1,5 +1,42 @@
 {% extends 'base.html' %} <!-- base.html의 내용을 가져오겠다. -->
 {% load staticfiles %}
 {% block content %}
+<div class="col-md-8 col-xs-12">
+    <aside class="f_widget contact_widget">
+        <div class="f_title">
+            <h3>Contact Us</h3>
+        </div>
+        <form class="row contact_widget_form" action="contact_process.php" method="post" id="contactForm"
+            novalidate="novalidate">
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="form-group col-md-12">
+                        <input type="text" class="form-control" id="name" name="name" placeholder="Your Name">
+                    </div>
+                    <div class="form-group col-md-12">
+                        <input type="text" class="form-control" id="phone" name="phone" placeholder="Phone">
+                    </div>
+                    <div class="form-group col-md-12">
+                        <input type="email" class="form-control" id="email" name="email" placeholder="E-Mail">
+                    </div>
+                    <div class="form-group col-md-12">
+                        <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="form-group col-md-12">
+                        <textarea class="form-control" name="message" id="message" rows="1"
+                            placeholder="Your Message......."></textarea>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group col-md-12">
+                <button type="submit" value="submit your quote" class="btn submint_btn form-control">SEND NOW</button>
+            </div>
+        </form>
+    </aside>
+</div>
 
 {% endblock %}  
