--- a/APAP/authservice/templates/authservice/signin.html
+++ b/APAP/authservice/templates/authservice/signin.html
@@ -13,9 +13,12 @@
                         <h3>으쌰으쌰</h3>
                     </div>
                     <h3><span id="typed"></span></h3>
-                    <h4>A Complete Landing Page and Multipurpose Package</h4>
-                    <a href="{% url 'signup' %}" class="btn view-demo"> 회원가입 </a>
-                    <a href="#" class="btn buy-now">Buy Drimo</a>
+                    <form class="login" method="POST" action="{% url 'signin' %}">
+                        {% csrf_token %}
+                        <a class="button secondaryAction" href=""></a>
+                        <button class="primaryAction btn btn-primary" type="submit"></button>
+                    </form>
+                    <a href="{% url 'signup' %}" class="btn view-demo">회원가입</a>
                 </div>
             </div>
         </div>
