--- a/APAP/authservice/templates/authservice/signin.html
+++ b/APAP/authservice/templates/authservice/signin.html
@@ -10,7 +10,7 @@
                     <div id="typed-strings">
                         <h3>동국대 멋쟁이 사자처럼</h3>
                         <h3>어푸어푸</h3>
-                        <h3>으쌰으쌰</h3>
+                        <h3>하.. 날렸다...</h3>
                     </div>
                     <h3><span id="typed"></span></h3>
                     <h4>A Complete Landing Page and Multipurpose Package</h4>
