Revert "Merge branch 'master' of https://github.com/CoffeeSaza-DonggukUniv/CoffeeSaza"
This reverts commit b863a4fe1a922b023a557a27e15af4b86e9a69f5, reversing
changes made to 7636d2cc21cd58f4a4f940495d9bd697eb5f4294.

--- a/APAP/authservice/templates/authservice/signin.html
+++ b/APAP/authservice/templates/authservice/signin.html
@@ -13,12 +13,9 @@
                         <h3>하.. 날렸다...</h3>
                     </div>
                     <h3><span id="typed"></span></h3>
-                    <form class="login" method="POST" action="{% url 'signin' %}">
-                        {% csrf_token %}
-                        <a class="button secondaryAction" href=""></a>
-                        <button class="primaryAction btn btn-primary" type="submit"></button>
-                    </form>
-                    <a href="{% url 'signup' %}" class="btn view-demo">회원가입</a>
+                    <h4>A Complete Landing Page and Multipurpose Package</h4>
+                    <a href="{% url 'signup' %}" class="btn view-demo"> 회원가입 </a>
+                    <a href="#" class="btn buy-now">Buy Drimo</a>
                 </div>
             </div>
         </div>
