--- a/APAP/settings/static/drimo/scss/_slider.scss
+++ b/APAP/settings/static/drimo/scss/_slider.scss
@@ -2,7 +2,7 @@
 ============================================================================================ */
 .main_slider_area{
     #main_slider{
-        background: url(../img/home-slider/base_BGI.jpg) no-repeat scroll center center;
+        background: url(../img/home-slider/slider-1.png) no-repeat scroll center center;
         background-size: cover;
     }
     #dash_slider{
