--- a/APAP/main/templates/main/verify.html
+++ b/APAP/main/templates/main/verify.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %} <!-- base.html의 내용을 가져오겠다. -->
 {% load staticfiles %}
 {% block content %}
-인증ㅇㅇ					
-{% endblock %} 
+인증ㄴㄴ
+이메일 인증 & 시간표 설정				
+{% endblock %}  
