--- a/APAP/main/templates/main/verify.html
+++ b/APAP/main/templates/main/verify.html
@@ -1,6 +1,21 @@
 {% extends 'base.html' %} <!-- base.html의 내용을 가져오겠다. -->
 {% load staticfiles %}
 {% block content %}
-인증ㄴㄴ
-이메일 인증 & 시간표 설정				
+		<div class="column">
+			<h3>이메일 인증</h3>
+			<form action="#" method="post">
+				<div class="field half first">
+					<label for="name">Name</label>
+					<input name="name" id="name" type="text" placeholder="Name">
+				</div>
+				<div class="field half">
+					<label for="email">Email</label>
+					<input name="email" id="email" type="email" placeholder="Email">
+				</div>
+				
+				<ul class="actions">
+					<li><input value="Send Message" class="button" type="submit"></li>
+				</ul>
+			</form>
+		</div>				
 {% endblock %}  
