--- a/APAP/main/templates/main/verify.html
+++ b/APAP/main/templates/main/verify.html
@@ -2,19 +2,15 @@
 {% load staticfiles %}
 {% block content %}
 		<div class="column">
-			<h3>이메일 인증</h3>
+			<h3>이메일 인증 : 웹메일 인증이 필요합니다</h3>
 			<form action="#" method="post">
-				<div class="field half first">
-					<label for="name">Name</label>
-					<input name="name" id="name" type="text" placeholder="Name">
-				</div>
 				<div class="field half">
 					<label for="email">Email</label>
 					<input name="email" id="email" type="email" placeholder="Email">
 				</div>
 				
 				<ul class="actions">
-					<li><input value="Send Message" class="button" type="submit"></li>
+					<li><input value="Submit" class="button" type="submit"></li>
 				</ul>
 			</form>
 		</div>				
