--- a/APAP/templates/base.html
+++ b/APAP/templates/base.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Drimo</title>
+    <title>어푸어푸</title>
     <!--    favicon-->
-    <link rel="shortcut icon" href="{% static 'image/fav-icon.png' %}" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'image/rubber-duck.png' %}" type="image/x-icon">
     <!-- Bootstrap -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/bootstrap-theme.min.css' %}" rel="stylesheet">
