--- a/APAP/main/templates/main/popup.html
+++ b/APAP/main/templates/main/popup.html
@@ -1,5 +1,8 @@
+<!--등록할 때 용지 조건 선택창-->
 {% extends 'base.html' %} <!-- base.html의 내용을 가져오겠다. -->
 {% load staticfiles %}
 {% block content %}
-
+<div class="dropdown">
+<!--여기는 윤영이의 노가다 사진 ㅋㅋ-->
+</div>
 {% endblock %}   
