--- a/APAP/templates/base.html
+++ b/APAP/templates/base.html
@@ -2,67 +2,73 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Drimo</title>
-    <!--    favicon-->
-    <link rel="shortcut icon" href="{% static 'image/fav-icon.png' %}" type="image/x-icon">
-    <!-- Bootstrap -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/bootstrap-theme.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/themify-icons.css' %}">
-    <link rel="stylesheet" href="{% static 'css/animate.css' %}">
-    <!--css-->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <!-- HTmL5 shim and Respond.js for IE8 support of HTmL5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
-</head>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <title>어푸어푸</title>
+        <!--    favicon-->
+        <link rel="shortcut icon" href="{% static 'image/fav-icon.png' %}" type="image/x-icon">
+        <!-- Bootstrap -->
+        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+        <link href="{% static 'css/bootstrap-theme.min.css' %}" rel="stylesheet">
+        <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
+        <link rel="stylesheet" href="{% static 'css/themify-icons.css' %}">
+        <link rel="stylesheet" href="{% static 'css/animate.css' %}">
+        <!--css-->
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <!-- HTmL5 shim and Respond.js for IE8 support of HTmL5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+            <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+            <![endif]-->
+    </head>
 
-<body>
-    
-    {% block content %}
-    
-    {% endblock %}
-    <footer class="footer-area">
-        <div class="container">
-            <div class="row text-center">
-                <p class="copyright">
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        </p>
+    <body>
+        <!--home.html으로 돌아올 수 있는 아이콘 하나 필요할 듯-->
+        <!--<a href = "home"></a>-->
+        <!--알림-->
+        {% comment %} <a img = "https://b.kisscc0.com/20180705/iiw/kisscc0-alarm-device-alarm-clocks-security-alarms-system-alarm-bell-5b3db22fb2f4a0.063019161530769967733.png"></a> {% endcomment %}
+        <!--프로필사진을 누르면 mypage.html으로-->
+        {% comment %} <a img = "#" href = "mypage"></a>
+        <h1>안녕하세요 {{}}님!</h1><br><br>        {% endcomment %}
+        {% block content %}
+        
+        {% endblock %}
+        <footer class="footer-area">
+            <div class="container">
+                <div class="row text-center">
+                    <p class="copyright">
+                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            </p>
+                </div>
             </div>
-        </div>
-    </footer>
-    <!--End Footer area-->
-    <script src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/nav.js' %}"></script>
-    <!--waypoint js-->
-    <script src="{% static 'vendores/waypoint/waypoints.min.js' %}"></script>
-    <!--counter js-->
-    <script src="{% static 'vendores/couterup/jquery.counterup.min.js' %}"></script>
-    <script src="{% static 'vendores/typedjs/typed.min.js' %}"></script>
-    <script src="{% static 'vendores/ripples/jquery.ripples-min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/scrollIt.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/wow.js' %}"></script>
-    <script src="{% static 'js/custom.' %}js"></script>
-    <script>
-    $(function() {
-        $.scrollIt();
-    });
-    </script>
-    <script>
-    new WOW().init();
-    </script>
-</body>
+        </footer>
+        <!--End Footer area-->
+        <script src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
+        <script src="{% static 'js/nav.js' %}"></script>
+        <!--waypoint js-->
+        <script src="{% static 'vendores/waypoint/waypoints.min.js' %}"></script>
+        <!--counter js-->
+        <script src="{% static 'vendores/couterup/jquery.counterup.min.js' %}"></script>
+        <script src="{% static 'vendores/typedjs/typed.min.js' %}"></script>
+        <script src="{% static 'vendores/ripples/jquery.ripples-min.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/scrollIt.min.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/wow.js' %}"></script>
+        <script src="{% static 'js/custom.' %}js"></script>
+        <script>
+        $(function() { 
+            $.scrollIt();
+        });
+        </script>
+        <script>
+        new WOW().init();
+        </script>
+    </body>
 
 </html>
