--- a/APAP/main/templates/main/mypage.html
+++ b/APAP/main/templates/main/mypage.html
@@ -4,28 +4,133 @@
 
 <!-- Stylesheet -->
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.3.1/flatly/bootstrap.min.css">
+<<!-- link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.3.1/flatly/bootstrap.min.css">
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="dist/js/BsMultiSelect.js"></script>
+<script src="dist/js/BsMultiSelect.js"></script> -->
 
 ㅇㅁㄴㅇㄹㅁ
 
-<select name="states" id="example" class="form-control"  multiple="multiple" style="display: none;">
-  <option value="AL">Alabama</option>
-  <option value="AK">Alaska</option>
-  <option value="AZ">Arizona</option>
-  <option value="AR">Arkansas</option>
-  <option selected value="CA">California</option>
-</select>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<title>Bootstrap 4 Multi-Select Plugin Demo</title>
+<link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.1/materia/bootstrap.min.css">
+<style>
+body { min-height: 100vh; background-color: #fafafa; font-family: 'Roboto'; }
+.container { margin: 150px auto; max-width: 640px; }
+</style>
+<link rel="preload" href="https://adservice.google.co.kr/adsid/integrator.js?domain=www.jqueryscript.net" as="script">
+<script src="https://pagead2.googlesyndication.com/pub-config/r20160913/ca-pub-2783044520727903.js"></script>
+<script src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script>
+<script src="https://www.googletagservices.com/activeview/js/current/osd.js?cb=%2Fr20100101"></script>
+<script src="https://pagead2.googlesyndication.com/pub-config/r20160913/ca-pub-2783044520727903.js"></script>
+<script type="text/javascript" src="https://adservice.google.co.kr/adsid/integrator.js?domain=www.jqueryscript.net"></script>
+<link rel="preload" href="https://adservice.google.com/adsid/integrator.js?domain=www.jqueryscript.net" as="script">
+<script type="text/javascript" src="https://adservice.google.com/adsid/integrator.js?domain=www.jqueryscript.net"></script>
+<link rel="preload" href="https://pagead2.googlesyndication.com/pagead/js/r20190724/r20190131/show_ads_impl.js" as="script">
 
-<script>
-$(function(){
-  $("select").dashboardCodeBsMultiSelect();
-});
+<div class="container">
+    <h1>Bootstrap 4 Multi-Select Plugin Demo</h1>
+    <select name="states" id="example" class="form-control" multiple="multiple" style="display: none;">
+                            <option value="AL">Alabama</option>
+                            <option value="AK">Alaska</option>
+                            <option value="AZ">Arizona</option>
+                            <option value="AR">Arkansas</option>
+                            <option selected="" value="CA">California</option>
+                            <option value="CO">Colorado</option>
+                            <option value="CT">Connecticut</option>
+                            <option value="DE">Delaware</option>
+                            <option value="DC">District Of Columbia</option>
+                            <option value="FL">Florida</option>
+                            <option value="GA">Georgia</option>
+                            <option value="HI">Hawaii</option>
+                        
+                            
+                            </select><div class="dashboardcode-bsmultiselect"><ul class="form-control btn border" style="cursor: text; display: flex; flex-wrap: wrap; align-items: center; margin-bottom: 0px; min-height: calc(2.25rem + 2px);"><li data-option-id="CA" class="badge" style="display: flex; align-items: center; padding-left: 0px;"><span>California</span><button aria-label="Close" tabindex="-1" type="button" class="close" style="font-size: 100%;"><span aria-hidden="true">×</span></button></li><li data-option-id="PA" class="badge" style="display: flex; align-items: center; padding-left: 0px;"><span>Pennsylvania</span><button aria-label="Close" tabindex="-1" type="button" class="close" style="font-size: 100%;"><span aria-hidden="true">×</span></button></li><li style="display: block;"><input type="search" autocomplete="off" style="width: 2ch; border: 0px; padding: 0px; outline: none; color: rgb(73, 80, 87);"></li></ul><ul class="dropdown-menu show" x-placement="bottom-start" style="position: absolute; transform: translate3d(275px, 233px, 0px); top: 0px; left: 0px; will-change: transform;"><li data-option-id="AL" class="px-2">
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="dashboardcode-bsmultiselect-states-generated-id-al">
+                        <label class="custom-control-label" for="dashboardcode-bsmultiselect-states-generated-id-al">Alabama</label>
+                    </div>
+                 </li><li data-option-id="AK" class="px-2">
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="dashboardcode-bsmultiselect-states-generated-id-ak">
+                        <label class="custom-control-label" for="dashboardcode-bsmultiselect-states-generated-id-ak">Alaska</label>
+                    </div>
+                 </li><li data-option-id="AZ" class="px-2">
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="dashboardcode-bsmultiselect-states-generated-id-az">
+                        <label class="custom-control-label" for="dashboardcode-bsmultiselect-states-generated-id-az">Arizona</label>
+                    </div>
+                 </li><li data-option-id="AR" class="px-2">
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="dashboardcode-bsmultiselect-states-generated-id-ar">
+                        <label class="custom-control-label" for="dashboardcode-bsmultiselect-states-generated-id-ar">Arkansas</label>
+                    </div>
+                 </li><li data-option-id="CA" class="px-2">
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="dashboardcode-bsmultiselect-states-generated-id-ca" checked="">
+                        <label class="custom-control-label" for="dashboardcode-bsmultiselect-states-generated-id-ca">California</label>
+                    </div>
+                 </li><li data-option-id="CO" class="px-2">
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="dashboardcode-bsmultiselect-states-generated-id-co">
+                        <label class="custom-control-label" for="dashboardcode-bsmultiselect-states-generated-id-co">Colorado</label>
+                    </div>
+                 </li><li data-option-id="CT" class="px-2">
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="dashboardcode-bsmultiselect-states-generated-id-ct">
+                        <label class="custom-control-label" for="dashboardcode-bsmultiselect-states-generated-id-ct">Connecticut</label>
+                    </div>
+                 </li><li data-option-id="DE" class="px-2">
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="dashboardcode-bsmultiselect-states-generated-id-de">
+                        <label class="custom-control-label" for="dashboardcode-bsmultiselect-states-generated-id-de">Delaware</label>
+                    </div>
+                 </li><li data-option-id="DC" class="px-2">
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="dashboardcode-bsmultiselect-states-generated-id-dc">
+                        <label class="custom-control-label" for="dashboardcode-bsmultiselect-states-generated-id-dc">District Of Columbia</label>
+                    </div>
+                 </li><li data-option-id="FL" class="px-2">
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="dashboardcode-bsmultiselect-states-generated-id-fl">
+                        <label class="custom-control-label" for="dashboardcode-bsmultiselect-states-generated-id-fl">Florida</label>
+                    </div>
+                 </li><li data-option-id="GA" class="px-2">
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="dashboardcode-bsmultiselect-states-generated-id-ga">
+                        <label class="custom-control-label" for="dashboardcode-bsmultiselect-states-generated-id-ga">Georgia</label>
+                    </div>
+                 </li><li data-option-id="HI" class="px-2">
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="dashboardcode-bsmultiselect-states-generated-id-hi">
+                        <label class="custom-control-label" for="dashboardcode-bsmultiselect-states-generated-id-hi">Hawaii</label>
+                    </div>
+                 </li></ul></div>
+</div>
+<iframe id="google_osd_static_frame_2812223392877" name="google_osd_static_frame" style="display: none; width: 0px; height: 0px;"></iframe>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+<script>$("select").dashboardCodeBsMultiSelect();</script>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-36251023-1']);
+  _gaq.push(['_setDomainName', 'jqueryscript.net']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
 
 $("select").bsMultiSelect({
   selectedPanelDefMinHeight: 'calc(2.25rem + 2px)',
@@ -49,31 +154,13 @@ $("select").bsMultiSelect({
   filterInputItemClass: '',
   filterInputClass: ''
 });
+
 </script>
+<ins class="adsbygoogle adsbygoogle-noablate" data-adsbygoogle-status="done" style="display: none !important;"><ins id="aswift_1_expand" style="display:inline-table;border:none;height:0px;margin:0;padding:0;position:relative;visibility:visible;width:0px;background-color:transparent;"><ins id="aswift_1_anchor" style="display:block;border:none;height:0px;margin:0;padding:0;position:relative;visibility:visible;width:0px;background-color:transparent;"><iframe frameborder="0" marginwidth="0" marginheight="0" vspace="0" hspace="0" allowtransparency="true" scrolling="no" allowfullscreen="true" onload="var i=this.id,s=window.google_iframe_oncopy,H=s&amp;&amp;s.handlers,h=H&amp;&amp;H[i],w=this.contentWindow,d;try{d=w.document}catch(e){}if(h&amp;&amp;d&amp;&amp;(!d.body||!d.body.firstChild)){if(h.call){setTimeout(h,0)}else if(h.match){try{h=s.upd(h,i)}catch(e){}w.location.replace(h)}}" id="aswift_1" name="aswift_1" style="left:0;position:absolute;top:0;border:0px;width:0px;height:0px;"></iframe></ins></ins></ins>
+<script src="dist/js/BsMultiSelect.js"></script>
+<iframe id="google_shimpl" style="display: none;"></iframe>
+<iframe id="google_esf" name="google_esf" src="https://googleads.g.doubleclick.net/pagead/html/r20190724/r20190131/zrt_lookup.html#" data-ad-client="ca-pub-2783044520727903" style="display: none;"></iframe>
 
 
 
 {% endblock %}
-
-<!-- <script>
-$(function () {
-    var loadForm = function () {
-        var btn = $(this);
-        $.ajax({
-            url: btn.attr("data-url"),
-            type: 'get',
-            dataType: 'json',
-            beforeSend: function () {
-                $('#id_lecture').djangoSelect2({multiple: true});
-                $("#modal").modal("show");
-            },
-            success: function (data) {
-                $("#modal .modal-content").html(data.html_product_form);
-            }
-        });
-    };
-
-    $("#product-add-button").click(loadForm);
-});
-</script>
- -->
