--- a/APAP/main/templates/main/home.html
+++ b/APAP/main/templates/main/home.html
@@ -6,21 +6,20 @@
         <section class="price_table_area" id="price">
             <div class="container">
                 <div class="main_title">
-                    <h2>등록</h2>
+                    <h2>대리프린트 목록</h2>
                 </div>
                 <div class="price_table_inner">
  
                     <div class="price_item">
                         <div class="price_header">
-                            <h3>PREMIUM</h3>
-                            <h2>$50</h2>
-                            <h6>/month</h6>
+                            <h3>프로필</h3>
+                            <h2>강의명</h2>
+                         
                         </div>
                         <ul>
-                            <li><a href="#">Free Useable</a></li>
-                            <li><a href="#">Easily Can Useable 10GB</a></li>
-                            <li><a href="#">Free Secuirity Service</a></li>
-                            <li><a href="#">Dedicated Useable Account</a></li>
+
+                            <li>배송비: </li>
+                            <li>타이며</li>                            
                         </ul>
                         <a class="price_btn" href="#">PURCHASE NOW</a>
                     </div>
