--- a/APAP/main/templates/main/mypage.html
+++ b/APAP/main/templates/main/mypage.html
@@ -37,23 +37,10 @@ google_ad_height = 90;
   <div class="container">
     <h1><center>시간표 선택</center></h1>
     <select name="states" id="example" class="form-control" multiple="multiple" style="display: none;">
-                            <option value="AL">Alabama</option>
-                            <option value="AK">Alaska</option>
-                            <option value="AZ">Arizona</option>
-                            <option value="AR">Arkansas</option>
-                            <option selected="" value="CA">California</option>
-                            <option value="CO">Colorado</option>
-                            <option value="CT">Connecticut</option>
-                            <option value="DE">Delaware</option>
-                            <option value="DC">District Of Columbia</option>
-                            <option value="FL">Florida</option>
-                            <option value="GA">Georgia</option>
-                            <option value="HI">Hawaii</option>
-                            <option value="ID">Idaho</option>
-                            <option value="IL">Illinois</option>
-                            <option value="IN">Indiana</option>
-                      
-                            </select></div>
+              {% for lecture in lectures %}
+                            <option value="{{lecture.code}}">{{lecture.name}} : {{lecture.code}}</option>
+              {% endfor %}
+    </select></div>
   </div>
   <iframe id="google_osd_static_frame_2812223392877" name="google_osd_static_frame" style="display: none; width: 0px; height: 0px;"></iframe><script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
