home.html icon complete

--- a/APAP/templates/base.html
+++ b/APAP/templates/base.html
@@ -4,6 +4,9 @@
 
 
 <head>
+    <style>
+        @font-face { font-family: 'Malssami815'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.0/Malssami815.woff') format('woff'); font-weight: normal; font-style: normal; }
+    </style>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -37,8 +40,11 @@
 </head>
 
     <body>
+
         <!--home.html으로 돌아올 수 있는 아이콘 하나 필요할 듯-->
-        <a style = "font-size: 15px" href = "home">Afford to Print: 어푸어푸</a>
+        <div style="text-align:center; margin-top: 30px; ">
+        <a style = "font-family: 'Malssami815'; font-size: 45px;" href = "home">Afford to Print: 어푸어푸</a>
+        </div>
         <!--알림-->
         {% comment %} <a img = "https://b.kisscc0.com/20180705/iiw/kisscc0-alarm-device-alarm-clocks-security-alarms-system-alarm-bell-5b3db22fb2f4a0.063019161530769967733.png"></a> {% endcomment %}
         <!--프로필사진을 누르면 mypage.html으로-->
