--- a/APAP/templates/base.html
+++ b/APAP/templates/base.html
@@ -6,6 +6,7 @@
 <head>
     <style>
         @font-face { font-family: 'Malssami815'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.0/Malssami815.woff') format('woff'); font-weight: normal; font-style: normal; }
+        @font-face { font-family: 'BBTreeGL'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_nine_@1.1/BBTreeGL.woff') format('woff'); font-weight: normal; font-style: normal; }
     </style>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -42,14 +43,16 @@
     <body>
 
         <!--home.html으로 돌아올 수 있는 아이콘 하나 필요할 듯-->
-        <div style="text-align:center; margin-top: 30px; ">
-        <a style = "font-family: 'Malssami815'; font-size: 45px;" href = "home">Afford to Print: 어푸어푸</a>
+        <div style="font-color: black; text-align:center; margin-top: 30px; ">
+            <a style = "font-family: 'Malssami815'; font-size: 45px;" href = "home">Afford to Print: 어푸어푸</a>
         </div>
-        <!--알림-->
-        {% comment %} <a img = "https://b.kisscc0.com/20180705/iiw/kisscc0-alarm-device-alarm-clocks-security-alarms-system-alarm-bell-5b3db22fb2f4a0.063019161530769967733.png"></a> {% endcomment %}
-        <!--프로필사진을 누르면 mypage.html으로-->
-        {% comment %} <a img = "#" href = "mypage"></a>
-        <h1>안녕하세요 {{}}님!</h1><br><br>        {% endcomment %}
+        <div style ="text-align: right; font-family: 'BBTreeGL'; font-size:10px; margin-right: 20px;">
+            <!--알림-->
+            <a href="#"><img src="{% static 'drimo/img/bell.png' %}" style = "width: 30px; height: 30px; border-radius: 50%;"></a>
+            <!--프로필사진을 누르면 mypage.html으로-->
+            <a href = "mypage"><img src="{% static 'drimo/img/stupid.png'  %}" style = "width: 30px; height: 30px;">안녕하세요 님!</a><br><br>
+           
+        </div>
         {% block content %}
         
         {% endblock %}
