--- a/APAP/authservice/templates/authservice/signin.html
+++ b/APAP/authservice/templates/authservice/signin.html
@@ -13,8 +13,8 @@
                         <h3>동국대 멋쟁이 사자처럼</h3>
                     </div>
                     <h3><span id="typed"></span></h3>
-                    <h4>계정이 없으시다면, <a href="{% url 'signup' %}">회원가입</a>을 먼저 해주세요 :)</h4>
-                    <form class="login" method="POST" action="{% url 'signin' %}">
+                    <h4>계정이 없으시다면, <a href="{% url 'authservice:signup' %}">회원가입</a>을 먼저 해주세요 :)</h4>
+                    <form class="login" method="POST" action="{% url 'authservice:login' %}">
                     
                     {% csrf_token %}
                         <div class="row">
