--- a/APAP/authservice/templates/authservice/signup.html
+++ b/APAP/authservice/templates/authservice/signup.html
@@ -12,7 +12,7 @@
                     <div class="f_title">
                         <h1>Sign Up</h1>
                     </div>
-                    <form class="row contact_widget_form" action="{% url 'signup' %}" method="post" id="contactForm"
+                    <form class="row contact_widget_form" action="{% url 'signup' %}" method="POST" id="contactForm"
                         novalidate="novalidate">
                         {% csrf_token %}
                         <h4><br>아래 정보를 입력해 회원 가입을 진행해주세요.<br>계정이 있다면, <a href="{% url 'signin' %}">로그인하세요</a>.</h4>
