--- a/APAP/main/templates/main/mypage.html
+++ b/APAP/main/templates/main/mypage.html
@@ -44,10 +44,17 @@ google_ad_height = 90;
         <option value="{{lecture.id}}" name="lec">{{lecture.name}} : {{lecture.code}}</option>
       {% endfor %}
     </select>
-    <input type="submit" value="submit"/>
+    <br> <br>
+    <center><input type="submit" value="submit"/></center>
   </form>
 </div>
-  
+<div>
+  <h1><center>{{user.username}}의 시간표<center></h1>
+  {% for item in schedule %}
+    <h2><center><b>{{item.lecture.name}}</b> {{item.lecture.code}}</center></h2>
+  {% endfor %}
+</div>
+<br> <br>
   <iframe id="google_osd_static_frame_2812223392877" name="google_osd_static_frame" style="display: none; width: 0px; height: 0px;"></iframe><script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
