--- a/APAP/main/templates/main/update.html
+++ b/APAP/main/templates/main/update.html
@@ -2,7 +2,14 @@
 {% extends 'base.html' %} <!-- base.html의 내용을 가져오겠다. -->
 {% load staticfiles %}
 {% block content %}
-
+    <form action="{% url 'main:update' pprint.pk %}" method="POST">
+        {% csrf_token %}
+            <h3 style = "font-family: '777Balsamtint'">수정하기</h3>
+            <table style = "font-family: '777Balsamtint'">
+                {{ form.as_table }}
+            </table>
+            <input style = "font-family: '777Balsamtint'" class="btn btn-primary" type="submit" value="수정">
+        </form>
 
 
     
