--- a/APAP/authservice/templates/authservice/signin.html
+++ b/APAP/authservice/templates/authservice/signin.html
@@ -6,11 +6,13 @@
         <div class="container">
             <div class="row">
                 <div class="hero-text">
+                <div class="app_round_image">
+                        
                     <h1>APAP</h1>
                     <div id="typed-strings">
-                        <h3>대리 프린트 서비스의 시작</h3>
-                        <h3>어푸어푸</h3>
                         <h3>동국대 멋쟁이 사자처럼</h3>
+                        <h3>어푸어푸</h3>
+                        <h3>대리 프린트 서비스의 시작</h3>
                     </div>
                     <h3><span id="typed"></span></h3>
                     <h4>계정이 없으시다면, <a href="{% url 'signup' %}">회원가입</a>을 먼저 해주세요 :)</h4>
@@ -45,6 +47,8 @@
                             <button class="btn buy-now">Sign In</button>
                         </div>
                         </form>
+                        <img class="round_c" src="{% static 'image/index/round-circle.png' %}" alt="">
+                        </div>
                 </div>
             </div>
         </div>
