--- a/APAP/settings/static/scss/_feature.scss
+++ b/APAP/settings/static/scss/_feature.scss
@@ -6,15 +6,16 @@
         padding-bottom: 55px;
     }
 }
-.app_feature_inner{
+// .app_feature_inner{
     
-}
+// }
 .app_round_image{
     position: relative;
     padding-top: 80px;
     text-align: center;
     .round_c{
-        animation: 10s round_image infinite linear;
+        animation: 3s round_image infinite linear;
+        transform: rotate( -270deg );
     }
     .app_mobile{
         position: absolute;
