--- a/APAP/settings/static/css/style.css
+++ b/APAP/settings/static/css/style.css
@@ -161,7 +161,7 @@ body {
     position: relative;
     width: 100%;
     content: '';
-    background: url('../image/header/base_BGI.jpg') no-repeat scroll center center;
+    background: url(../image/header/base_BGI.png) no-repeat scroll center center;
     background-size: cover;
     min-height: 900px;
     z-index: 1;
