--- a/APAP/templates/base.html
+++ b/APAP/templates/base.html
@@ -2,12 +2,27 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
+    <style>
+        @font-face { font-family: 'Malssami815'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.0/Malssami815.woff') format('woff'); font-weight: normal; font-style: normal; }
+        @font-face { font-family: 'BBTreeGL'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_nine_@1.1/BBTreeGL.woff') format('woff'); font-weight: normal; font-style: normal; }
+        @font-face { font-family: '777Balsamtint'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_nine_@1.1/777Balsamtint.woff') format('woff'); font-weight: normal; font-style: normal; }    
+    </style>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>어푸어푸</title>
+    {% comment %} <!--여기부터 index폴더 안에 있는 css-->
+    <link href="{% static 'image/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static '/index/bootstrap-theme.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/index/font-awesome.min.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/index/themify-icons.css' %}">
+    <link rel="stylesheet" href="{% static 'css/index/animate.css' %}">
+    <!--css-->
+    <link rel="stylesheet" href="{% static 'css/index/style.css' %}">
+    <!--end index 폴더 css-->     {% endcomment %}
     <!--    favicon-->
     <link rel="shortcut icon" href="{% static 'image/rubber-duck.png' %}" type="image/x-icon">
     <!-- Bootstrap -->
@@ -28,12 +43,7 @@
 
     <body>
         <!--home.html으로 돌아올 수 있는 아이콘 하나 필요할 듯-->
-        <!--<a href = "home"></a>-->
-        <!--알림-->
-        {% comment %} <a img = "https://b.kisscc0.com/20180705/iiw/kisscc0-alarm-device-alarm-clocks-security-alarms-system-alarm-bell-5b3db22fb2f4a0.063019161530769967733.png"></a> {% endcomment %}
-        <!--프로필사진을 누르면 mypage.html으로-->
-        {% comment %} <a img = "#" href = "mypage"></a>
-        <h1>안녕하세요 {{}}님!</h1><br><br>        {% endcomment %}
+
         {% block content %}
 
         {% endblock %}
