--- a/APAP/authservice/templates/authservice/signin.html
+++ b/APAP/authservice/templates/authservice/signin.html
@@ -42,7 +42,7 @@
                         </div>
                         <br><br><br>
                         <div class="form-group col-md-12">
-                            <button class="btn buy-now">Sign In</button>
+                            <input type = "submit" class="btn buy-now" value="Sign In">
                         </div>
                         </form>
                 </div>
