--- a/APAP/authservice/templates/authservice/signup.html
+++ b/APAP/authservice/templates/authservice/signup.html
@@ -61,7 +61,7 @@
                                 </div>
                             </div>
                             <div class="form-group col-md-12">
-                                <button class="btn buy-now">Sign Up</button>
+                                <input type="submit" class="btn buy-now" value="Sign Up">
                             </div>
                         </form>
                     
