--- a/APAP/main/templates/main/upload.html
+++ b/APAP/main/templates/main/upload.html
@@ -1,5 +1,5 @@
 <!--등록-->
-{% extends 'base.html' %} <!-- base.html의 내용을 가져오겠다. -->
+{% extends 'base_index.html' %} <!-- base.html의 내용을 가져오겠다. -->
 {% load staticfiles %}
 {% block content %}
 {% load bootstrap4 %}
@@ -11,27 +11,15 @@
     <div class="main_title">
         <h2>인쇄 설정</h2>
     </div>
-    <div class="row">
-    <div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        과목명 ▼
-    </button>
-    <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-        {% for item in schedule %}
-        <button class="dropdown-item" type="button">{{item.lecture.name}}</button>
-        {% endfor %}
-    </div>
-    </div>
-    <a img = "https://banner2.kisspng.com/20180717/vjx/kisspng-arrow-computer-icons-clip-art-next-icon-5b4ddd72766330.0331188915318296184849.jpg"
-    alt = "next icon for selecting various conditions"></a>
     
         <form action="#" method="POST" enctype="multipart/form-data" novalidate>
             <div class="control-group">
             {% bootstrap_form form %}
             {% csrf_token %}
-           
+            {{form.media}}
+
+            </div>
                  <button type="submit"> UPLOAD </button>
-               
              </div>
         </form>
     </div>
