--- a/APAP/authservice/templates/authservice/signin.html
+++ b/APAP/authservice/templates/authservice/signin.html
@@ -6,19 +6,19 @@
         <div class="container">
             <div class="row">
                 <div class="hero-text">
-                <div class="app_round_image">
+                    <div class="app_round_image">
+                        <h1>APAP</h1>
+                        <div id="typed-strings">
+                            <h3>동국대 멋쟁이 사자처럼</h3>
+                            <h3>어푸어푸</h3>
+                            <h3>대리 프린트 서비스의 시작</h3>
+                        </div>
+                        <h3><span id="typed"></span></h3>
+                        <h4>계정이 없으시다면, <a href="{% url 'authservice:register' %}">회원가입</a>을 먼저 해주세요 :)</h4>
+
+                        <form class="login" method="POST" action="{% url 'authservice:login' %}">
                         
-                    <h1>APAP</h1>
-                    <div id="typed-strings">
-                        <h3>동국대 멋쟁이 사자처럼</h3>
-                        <h3>어푸어푸</h3>
-                        <h3>대리 프린트 서비스의 시작</h3>
-                    </div>
-                    <h3><span id="typed"></span></h3>
-                    <h4>계정이 없으시다면, <a href="{% url 'authservice:register' %}">회원가입</a>을 먼저 해주세요 :)</h4>
-                    <form class="login" method="POST" action="{% url 'authservice:login' %}">
-                    
-                    {% csrf_token %}
+                        {% csrf_token %}
                         <div class="row">
                             <div class="form-group col-md-12">
                             <input
@@ -47,8 +47,8 @@
                             <input type = "submit" class="btn buy-now" value="Sign In">
                         </div>
                         </form>
-                        <img class="round_c" src="{% static 'image/index/round-circle.png' %}" alt="">
-                        </div>
+                        {% comment %} <img class="round_c" src="{% static 'image/index/round-circle.png' %}" alt=""> {% endcomment %}
+                    </div>
                 </div>
             </div>
         </div>
